# keyfixer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  extension-build.js  get_mac_arabic.py  index-desktop.html  index.html  metadata.json  package-lock.json  package.json  server.ts  test.py  test_ddg.py  test_mac_layout.py  tsconfig.json  tsconfig.tsbuildinfo  vite.config.desktop.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/: generate_app_icons.py  generate_tray_icon.py
assets/icons/: keyfixer.icns
docs/: README.md  architecture.md  changelog.md  chrome-extension.md  desktop-app.md  development.md  floating-window.md  keyboard-layouts.md  privacy.md  publishing-chrome-web-store.md  roadmap.md  seo.md  testing.md  troubleshooting.md
experimental/: README.md  keyfixer.py
extension/: manifest.json
extension/src/: background.ts  content.ts  popup.html  popup.ts
public/: robots.txt  sitemap.xml
public/chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js
scratch/: generate_icons.py
src/: App.tsx  desktop-main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConverterArea.tsx  DesktopApp.tsx  DeveloperCredit.tsx  FloatingKeyFixer.tsx  Footer.tsx  VirtualKeyboard.tsx
src/core/domain/entities/: keymap.ts
src/core/keyboard/: detectConversionDirection.ts  index.ts  keyboardLayoutConverter.ts  types.ts
src/i18n/: translations.ts
tests/: keyboardLayoutConverter.test.ts
(+4 files in other folders)
