[package]
name = "keyfixer-desktop"
version = "0.1.0"
description = "KeyFixer Desktop — Always-on-top floating keyboard layout fixer"
authors = ["Obada Dallo"]
edition = "2021"

[lib]
name = "keyfixer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "keyfixer-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
